--- a/views/new.erb
+++ b/views/new.erb
@@ -1,3 +1,22 @@
-<h1>Add new Post</h1>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Leprosorium</title>
+</head>
+<body>
 
-<p>We will new posts here</p>
+  <h1>Add new Post</h1>
+
+  <p>We will new posts here</p>
+
+  <form>
+    <textarea class="form-control" rows="6"></textarea>
+    <br>
+    <button type="submit" class="btn btn-danger">Submit</button>
+  </form>
+
+</body>
+</html>
