Correct button and textarea

--- a/views/new.erb
+++ b/views/new.erb
@@ -12,10 +12,10 @@
 
   <p>We will new posts here</p>
 
-  <form>
-    <textarea class="form-control" rows="6"></textarea>
+  <form action="/new" method="post">
+    <textarea class="form-control" rows="6" placeholder="Enter your post"></textarea>
     <br>
-    <button type="submit" class="btn btn-danger">Submit</button>
+    <button type="submit" class="btn btn-warning">Send post</button>
   </form>
 
 </body>
