--- a/views/index.erb
+++ b/views/index.erb
@@ -15,6 +15,8 @@
       <%= post['content'] %> <br>
       <br>
       Added at <%= post['created_date'] %> <br>
+      <br>
+      <a href="/post/<%= post['id'] %>">Comments</a>
       <hr>
     </p>
   <% end %>
