--- a/views/new.erb
+++ b/views/new.erb
@@ -13,6 +13,7 @@
   <p>We will new posts here</p>
 
   <form action="/new" method="post">
+    <input name="name" type="text" class="form-control" placeholder="Enter name">
     <textarea name="content" class="form-control" rows="6" placeholder="Enter your post"></textarea>
     <br>
     <button type="submit" class="btn btn-warning">Send post</button>
